# amdgpu_top_tui2

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  gauge.rs  main.rs  ui.rs
