[package]
name = "amdgpu_top_tui2"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "An alternate nvitop/btop-style TUI frontend for amdgpu_top (CPU + AMD GPU + Strix Halo XDNA NPU)"
repository = "https://github.com/lhl/amdgpu_top_tui2"
authors = ["LHL"]

[[bin]]
name = "amdgpu-top-tui2"
path = "src/main.rs"

[dependencies]
libamdgpu_top = { git = "https://github.com/Umio-Yasuno/amdgpu_top" }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Local-dev override: swap the git dep for a local checkout to poke at the
# libamdgpu_top public API:
#   libamdgpu_top = { path = "../reference/amdgpu_top/crates/libamdgpu_top" }
